fix(menu): spacing adjustments including divider inline margin
- Includes spacing on left and right of divider to match the same
  spacing used on left and right of menu item labels and heading.
- Remove extra padding on presentational list items used for section
  header and divider examples.
- Simplify rules for padding on sectionHeading. Default inline padding
  and remove inline padding on collapsible variant.

--- a/components/menu/index.css
+++ b/components/menu/index.css
@@ -250,6 +250,7 @@ governing permissions and limitations under the License.
     overflow: visible;
     inline-size: auto;
     margin-block: var(--mod-menu-item-bottom-edge-to-text, var(--spectrum-menu-item-bottom-edge-to-text));
+    margin-inline: var(--mod-menu-item-label-inline-edge-to-content, var(--spectrum-menu-item-label-inline-edge-to-content));
   }
 }
 
@@ -281,8 +282,16 @@ governing permissions and limitations under the License.
   opacity: 1;
 }
 
-.spectrum-Menu-item,
+/* Presentational list items for sections and dividers. */
 .spectrum-Menu li:not(.spectrum-Menu-item, .spectrum-Menu-divider) {
+  display: block;
+  position: relative;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.spectrum-Menu-item {
   cursor: pointer;
   position: relative;
   align-items: center;
@@ -302,8 +311,7 @@ governing permissions and limitations under the License.
   text-decoration: none;
 }
 
-.spectrum-Menu-item,
-.spectrum-Menu li:not(.spectrum-Menu-item, .spectrum-Menu-divider) {
+.spectrum-Menu-item {
   display: grid;
   grid-template-areas:
     ".            chevronAreaCollapsible .             iconArea sectionHeadingArea  .         .           .                 "
@@ -530,10 +538,6 @@ governing permissions and limitations under the License.
   grid-column: 5 / -1;
 }
 
-.spectrum-Menu li:not(.spectrum-Menu-item, .spectrum-Menu-divider) > .spectrum-Menu-sectionHeading {
-  padding-inline-start: var(--mod-menu-item-label-inline-edge-to-content, var(--spectrum-menu-item-label-inline-edge-to-content));
-}
-
 .spectrum-Menu-itemDescription {
   grid-area: descriptionArea;
 }
@@ -616,6 +620,7 @@ governing permissions and limitations under the License.
   min-inline-size: var(--mod-menu-section-header-min-width, var(--spectrum-menu-section-header-min-width));
   padding-block-start: var(--mod-menu-section-header-top-edge-to-text, var(--mod-menu-item-top-edge-to-text, var(--spectrum-menu-item-top-edge-to-text)));
   padding-block-end: var(--mod-menu-section-header-bottom-edge-to-text, var(--mod-menu-item-bottom-edge-to-text, var(--spectrum-menu-item-bottom-edge-to-text)));
+  padding-inline: var(--mod-menu-item-label-inline-edge-to-content, var(--spectrum-menu-item-label-inline-edge-to-content));
 }
 
 /* collapsible sub-menus */
@@ -636,12 +641,15 @@ governing permissions and limitations under the License.
   }
 
   .spectrum-Menu {
-    margin-block-start: calc(var(--mod-menu-item-bottom-edge-to-text, var(--spectrum-menu-item-bottom-edge-to-text)) / 2);
     display: none;
   }
 
   .spectrum-Menu.is-open {
     display: block;
+  }
+
+  .spectrum-Menu-sectionHeading {
+    padding-inline: 0;
   }
 }
 
